clear any folder

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">investFlow</string>
-    <string name="title_activity_main">investFlow</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="app_name">capacitor-sqlite-react-typeorm-app</string>
+    <string name="title_activity_main">capacitor-sqlite-react-typeorm-app</string>
+    <string name="package_name">com.cosentino.app.ionic.react</string>
+    <string name="custom_url_scheme">com.cosentino.app.ionic.react</string>
 </resources>
